<resources>
    <string name="app_name">       _</string>
    <string name="description">Описание товаров</string>
    <string name="telephon">Телефон</string>
    <string name="category">Категория</string>
    <string name="city">Город</string>

    <string name="enterprise_name">Имя предприятия</string>
    <string name="action_search"> </string>
    <string name="of_branches">По отраслях</string>
    <string name="of_regions">По регионам</string>
    <string name="products">Товары</string>
    <string name="products_list">Все товары</string>
    <string name="info">Информация</string>
    <string name="head">Руководитель</string>
    <string name="adres">Адресс</string>
    <string name="product_name">Название продукта</string>
    <string name="product_price">Цена продукта</string>
    <string name="buy">Заказать</string>
    <string name="price">Цена</string>
    <string name="description_big">Большое описание товара, состоящее из множества строк. вставлено сбда чтобы продемонстрировать возможность прокрутки Большое описание товара, состоящее из множества строк. вставлено сбда чтобы продемонстрировать возможность прокрутки Большое описание товара, состоящее из множества строк. вставлено сбда чтобы продемонстрировать возможность прокрутки Большое описание товара, состоящее из множества строк. вставлено сбда чтобы продемонстрировать возможность прокрутки</string>
    <string name="your_name">Ваше имя*</string>
    <string name="your_company">Ваше предприятие</string>
    <string name="your_telephon">Ваш телефон*</string>
    <string name="your_mail">Ваша почта</string>
    <string name="your_comment">Ваш комментарий</string>
    <string name="order">Отправить</string>
    <string name="contacts">Контакты</string>
    <string name="ent_name">Имя предприятия</string>


</resources>
