<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textColor="#dd4225"
        android:textSize="20dp"
        android:gravity="center_horizontal"/>
    <ImageView
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:layout_weight="0.68" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/description_big" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="25dp"
        android:paddingLeft="20dp"
            android:textColor="#dd4225"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:layout_gravity="center"
            android:id="@+id/buttonBuy"
            />

</LinearLayout>
</ScrollView>
