<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.biz_3.InfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_weight="2.14"
        android:padding="0dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="0dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/place_company_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"

            android:textColor="#dd4225"
            android:textSize="25sp"
            android:paddingLeft="30dp"
            android:gravity="center"

            tools:text="@string/enterprise_name" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/shape_category"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imagemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mail"
            android:layout_weight="2"
            android:padding="5dp"/>

        <ImageView
            android:id="@+id/imagesite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="2"
            android:padding="5dp"
            android:src="@drawable/site" />

        <ImageView
            android:id="@+id/imagecall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/call"
            android:layout_weight="2"
            android:padding="5dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/products"
        android:textColor="#dd4225" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_products"
        android:layout_width="match_parent"
        android:layout_height="138dp"
        android:layout_weight="20">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/buttonAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="2"
        android:text="@string/products_list" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/info"
        android:textColor="#dd4225" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="10"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/head"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/adres"
            />
    </LinearLayout>


</LinearLayout>
