<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="5dp"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/enterprise_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="10dp"

                android:text="@string/enterprise_name"
                android:textColor="@color/colorBlue"
                android:textSize="27sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/description" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="124dp"
            android:layout_marginRight="90dp"
            android:layout_gravity="right"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iccity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:padding="3dp"
                android:src="@drawable/ic_city" />

            <ImageView
                android:id="@+id/ictelephon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="0dp"
                android:src="@drawable/ic_tel" />

            <ImageView
                android:id="@+id/iccategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="3dp"
                android:src="@drawable/ic_category" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/city" />

            <TextView
                android:id="@+id/telephon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="10dp"
                android:text="@string/telephon" />

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="10dp"
                android:text="@string/category" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>